@@ -5,7 +5,8 @@ opcode.def: make-opcodes-def.pl cil-opcodes.xml
 defdir = $(includedir)/mono/cil
 def_DATA = opcode.def
 
-xmldir = $(share)/mono/cil
+xmldir = $(datadir)/mono/cil
 xml_DATA = cil-opcodes.xml
 
 EXTRA_DIST=opcode.def make-opcodes-def.pl make-opcode-def.xsl $(xml_DATA) $(def_DATA)
+
